language/move-lang/tests/move_check/typing/while_condition_invalid.exp
error: 

   ┌── tests/move_check/typing/while_condition_invalid.move:3:16 ───
   │
 3 │         while (()) ();
   │                -- The type: '()'
   │                -- Is not compatible with: 'bool'
   │                ^^ Invalid while condition
   │

error: 

   ┌── tests/move_check/typing/while_condition_invalid.move:4:16 ───
   │
 4 │         while ((())) ();
   │                ---- The type: '()'
   │                ---- Is not compatible with: 'bool'
   │                ^^^^ Invalid while condition
   │

error: 

   ┌── tests/move_check/typing/while_condition_invalid.move:5:16 ───
   │
 5 │         while ({}) ()
   │                -- The type: '()'
   │                -- Is not compatible with: 'bool'
   │                ^^ Invalid while condition
   │

error: 

   ┌── tests/move_check/typing/while_condition_invalid.move:8:28 ───
   │
 8 │     fun t1<T: copyable>(x: T) {
   │                            - The type: 'T'
 9 │         while (x) ();
   │                - Is not compatible with: 'bool'
   │                ^ Invalid while condition
   │

error: 

    ┌── tests/move_check/typing/while_condition_invalid.move:10:16 ───
    │
 10 │         while (0) ();
    │                - The type: integer
    │                - Is not compatible with: 'bool'
    │                ^ Invalid while condition
    │

error: 

    ┌── tests/move_check/typing/while_condition_invalid.move:11:16 ───
    │
 11 │         while (0x0) ()
    │                --- The type: 'address'
    │                --- Is not compatible with: 'bool'
    │                ^^^ Invalid while condition
    │

error: 

    ┌── tests/move_check/typing/while_condition_invalid.move:15:16 ───
    │
 15 │         while ((false, true)) ();
    │                ------------- The type: '(bool, bool)'
    │                ------------- Is not compatible with: 'bool'
    │                ^^^^^^^^^^^^^ Invalid while condition
    │

error: 

    ┌── tests/move_check/typing/while_condition_invalid.move:16:16 ───
    │
 16 │         while ((0, false)) ()
    │                ---------- The type: '({integer}, bool)'
    │                ---------- Is not compatible with: 'bool'
    │                ^^^^^^^^^^ Invalid while condition
    │

